--- a/bilanci_project/static/less/project.less
+++ b/bilanci_project/static/less/project.less
@@ -636,6 +636,11 @@ share box
   font-weight: 800;
 }
 
+//hierarchical control bar
+#hcb .parameter_name, #hcb .share_button{
+  padding-top: 5px;
+}
+
 //confronti fix error message
 #main-content #log{
   padding-left: 0;
